--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,9 @@
 		"type_traits": "c",
 		"array": "c",
 		"string": "c",
-		"string_view": "c"
+		"string_view": "c",
+		"allegro_acodec.h": "c",
+		"gamescene.h": "c"
 	},
 	"C_Cpp.errorSquiggles": "disabled"
 }
